# rp-pppoe

./: .gitignore  README  README.md  go  go-gui  rp-pppoe.spec
.github/: FUNDING.yml
PerfTest/: Makefile  README.txt  perf-client.c  perf-doc.tex  perf-receiver-udp.c  perf-sender-udp.c  perf-server.c  run-client.sh  run-server.sh  setup.fig
configs/: firewall-masq  firewall-standalone  pap-secrets  pppoe-server-options  pppoe.conf
doc/: CHANGES  HOW-TO-CONNECT  KERNEL-MODE-PPPOE  LICENSE  PROBLEMS
gui/: Makefile  Makefile.in  en.msg  grab-msgs.tcl  ja.msg  pppoe-wrapper.1  tkpppoe  tkpppoe.1  tkpppoe.in  wrapper.c
gui/html/: tkpppoe.html
man/: pppoe-connect.8  pppoe-relay.8  pppoe-server.8  pppoe-setup.8  pppoe-sniff.8  pppoe-start.8  pppoe-status.8  pppoe-stop.8  pppoe.8  pppoe.conf.5
scripts/: pppoe-connect.in  pppoe-init-suse.in  pppoe-init.in  pppoe-setup.in  pppoe-start.in  pppoe-status  pppoe-stop.in
src/: Makefile.in  common.c  config.h.in  configure  configure.ac  configure.in  control_socket.c  control_socket.h  debug.c  discovery.c  if.c  md5.c  md5.h  modem.c  modem.h  plugin.c  ppp.c  pppoe-bridge.c  pppoe-bridge.h  pppoe-server.c  pppoe-server.h  pppoe-sniff.c  pppoe.c  pppoe.h  relay.c  relay.h  rs232.c  rs232.h  types.h
src/libevent/: Makefile  Makefile.in  event.c  event.h  event_sig.c  event_tcp.c  event_tcp.h  eventpriv.h  hash.c  hash.h
src/libevent/Doc/: Makefile  libevent.tex
src/tests/: Makefile  testevent.c
